# self-hosted-maps-codespace

./: .gitignore  Dockerfile  Makefile  README.md  index.html  main.js  package-lock.json  package.json  pyproject.toml  style.css
.devcontainer/: devcontainer.json
